@@ -64,8 +64,8 @@ JHtml::_('behavior.formvalidation');
 
 
 <div class="width-50 fltrt">
-		<?php echo $pane->startPane('contact-pane'); ?>
-			<?php echo $pane->startPanel(JText::_('Contact_Details'), 'basic-options'); ?>
+		<?php echo  JHtml::_('sliders.start', 'contact-slider'); ?>
+				<?php echo JHtml::_('sliders.panel',JText::_('Contact_Details'), 'basic-options'); ?>
 			<fieldset class="panelform">
 			<p><?php echo empty($this->item->id) ? JText::_('Contact_Contact_Details') : JText::sprintf('Contact_Edit_Details', $this->item->id); ?></p>
 						<?php echo $this->form->getLabel('con_position'); ?>
@@ -111,8 +111,8 @@ JHtml::_('behavior.formvalidation');
 						<?php endif; ?>
 					<?php endforeach; ?>
 			</fieldset>
-			<?php echo $pane->endPanel(); ?>
-			<?php echo $pane->startPanel(JText::_('Contact_Fieldset_Contact_Form'), 'email-options'); ?>
+
+			<?php echo JHtml::_('sliders.panel',JText::_('Contact_Fieldset_Contact_Form'), 'email-options'); ?>
 				<fieldset class="panelform">
 
 						<?php echo $this->form->getLabel('show_email_form'); ?>
@@ -134,9 +134,8 @@ JHtml::_('behavior.formvalidation');
 						<?php echo $this->form->getInput('banned_text'); ?>
 				</fieldset>
 
-			<?php echo $pane->endPanel(); ?>
 
-		<?php echo $pane->endPane(); ?>
+			<?php echo 	 JHtml::_('sliders.end'); ?>
 </div>
 
 	<input type="hidden" name="task" value="" />
